--- a/0_adminManagement/createRole.html
+++ b/0_adminManagement/createRole.html
@@ -34,7 +34,7 @@
             </a>
           </div>
           <div class="logout">
-            <a href="/0_adminManagement/adminManagement.html">
+            <a href="/0_adminManagement/fetchRoles.html">
               <img alt="" title="" /> Back &nbsp; | &nbsp;
             </a>
           </div>
@@ -53,7 +53,9 @@
 										<form id="createRoleForm">
                                             <label for="name">Role Name:</label>
                                             <input type="text" id="name" name="name" required />
-                                            <button type="submit">Create Role</button>
+                                            <button type="submit" class="btn btn-primary">
+                                              Create Role
+                                            </button>
                                           </form>
                                           <p id="statusMessage"></p>
 									</div>	
