--- a/0_adminManagement/updateAdminRoles.html
+++ b/0_adminManagement/updateAdminRoles.html
@@ -37,7 +37,7 @@
             <a href="/adminhome.html">Home &nbsp; | &nbsp;</a>
           </div>
           <div class="logout">
-            <a href="/0_adminManagement/adminManagement.html"
+            <a href="/0_adminManagement/fetchRoles.html"
               >Back &nbsp; | &nbsp;</a
             >
           </div>
@@ -60,7 +60,9 @@
                       <input type="text" id="userid" name="userid" required />
                       <label for="roles">Roles (comma-separated):</label>
                       <input type="text" id="roles" name="roles" required />
-                      <button type="submit">Update Roles</button>
+                      <button type="submit" class="btn btn-primary">
+                        Update Roles
+                      </button>
                     </form>
                     <p id="statusMessage"></p>
                   </div>
