--- a/1_cardManagement/createCard.html
+++ b/1_cardManagement/createCard.html
@@ -47,7 +47,7 @@
             </a>
           </div>
           <div class="logout">
-            <a href="/1_cardManagement/cardManagement.html">
+            <a href="/1_cardManagement/searchCard.html">
               <img alt="" title="" /> Back &nbsp; | &nbsp;
             </a>
           </div>
@@ -155,7 +155,10 @@
                       </select>
                     </div>
                     <div class="col-md-12">
-                      <input type="submit" value="Submit" />
+                      <!-- <input type="submit" value="Submit" /> -->
+                      <button type="submit" class="btn btn-primary">
+                        Submit
+                      </button>
                     </div>
                   </div>
                 </form>
