--- a/2_foodManagement/bookFoodForGuest.html
+++ b/2_foodManagement/bookFoodForGuest.html
@@ -125,7 +125,10 @@
                       </fieldset>
                     </div>
                     <div class="col-md-12">
-                      <button type="submit">Book Food</button>
+                      <!-- <button type="submit">Book Food</button> -->
+                      <button type="submit" class="btn btn-primary">
+                        Book Food
+                      </button>
                     </div>
                   </div>
                 </form>
