--- a/2_foodManagement/cancelFoodForGuest.html
+++ b/2_foodManagement/cancelFoodForGuest.html
@@ -125,7 +125,10 @@
                       </fieldset>
                     </div>
                     <div class="col-md-12">
-                      <button type="submit">Cancel Food Booking</button>
+                      <!-- <button type="submit">Cancel Food Booking</button> -->
+                      <button type="submit" class="btn btn-primary">
+                        Cancel Food Booking
+                      </button>
                     </div>
                   </div>
                 </form>
