--- a/2_foodManagement/foodReport.html
+++ b/2_foodManagement/foodReport.html
@@ -72,11 +72,14 @@
                       /><br /><br />
                     </div>
                     <div class="col-md-12">
-                      <button type="submit">Get Report</button>
+                      <!-- <button type="submit">Get Report</button> -->
+                      <button type="submit" class="btn btn-primary">
+                        Get Report
+                      </button> <br>
                     </div>
                   </div>
                 </form>
-              </div>
+              
 
               <!-- Table for displaying fetched data -->
               <div id="foodReportContainer"></div>
