--- a/2_foodManagement/updateMenu.html
+++ b/2_foodManagement/updateMenu.html
@@ -88,7 +88,10 @@
                       <input type="text" id="lunch" name="lunch" required />
                       <label for="dinner">Dinner:</label>
                       <input type="text" id="dinner" name="dinner" required />
-                      <button type="submit">Update Menu</button>
+                      <!-- <button type="submit">Update Menu</button> -->
+                      <button type="submit" class="btn btn-primary">
+                        Update Menu
+                      </button>
                     </form>
                     <p id="statusMessage"></p>
                   </div>
