--- a/4_adhyayanManagement/createAdhyayan.html
+++ b/4_adhyayanManagement/createAdhyayan.html
@@ -79,7 +79,8 @@
                                         <textarea id="comments" name="comments" rows="4"></textarea>
                                     </div>
                                     <div class="col-md-12">
-                                        <input type="submit" value="Create Adhyayan" />
+                                        <!-- <input type="submit" value="Create Adhyayan" /> -->
+                                        <button type="submit" class="btn btn-primary"> Create Adhyayan </button>
                                     </div>
                                 </div>
                             </form>
