--- a/4_adhyayanManagement/openCloseAdhyayan.html
+++ b/4_adhyayanManagement/openCloseAdhyayan.html
@@ -80,10 +80,13 @@
                       <label for="status">Status:</label>
                       <select id="status" name="status" required>
                         <option value="open">Open</option>
-                        <option value="close">Close</option>
+                        <option value="close">Closed</option>
                       </select>
 
-                      <button type="submit">Update Status</button>
+                      <!-- <button type="submit">Update Status</button> -->
+                      <button type="submit" class="btn btn-primary">
+                        Update Status
+                      </button>
                     </form>
 
                     <p id="responseMessage"></p>
