--- a/4_adhyayanManagement/updateAdhyayan.html
+++ b/4_adhyayanManagement/updateAdhyayan.html
@@ -93,13 +93,14 @@
                     <textarea id="comments" name="comments" rows="4"></textarea
                     ><br /><br />
 
-                    <input
+                    <!-- <input
                       type="button"
                       id="saveButton"
                       name="saveButton"
                       style="width: 100px"
                       value="Save"
-                    />
+                    /> -->
+                    <button type="button" id="saveButton" name="saveButton" class="btn btn-primary"> Save </button>
                   </form>
                 </div>
               </div>
