--- a/2_foodManagement/foodReportDetails.html
+++ b/2_foodManagement/foodReportDetails.html
@@ -87,11 +87,14 @@
                       </select>
                     </div>
                     <div class="col-md-12">
-                      <button type="submit">Get Report</button>
+                      <!-- <button type="submit">Get Report</button> -->
+                      <button type="submit" class="btn btn-primary">
+                        Get Report
+                      </button> </br>
                     </div>
                   </div>
                 </form>
-              </div>
+              
 
               <!-- Table for displaying fetched data -->
               <div id="foodReportContainer"></div>
