--- a/2_foodManagement/issuePlate.html
+++ b/2_foodManagement/issuePlate.html
@@ -58,8 +58,10 @@
 										<input type="hidden" name="transaction_detail" value="dinner">
 									</div>
 									<div class="col-md-12">
-										<input type="submit" value="submit">
+										<!-- <input type="submit" value="submit"> -->
+                    <button type="submit" class="btn btn-primary"> Submit </button>
 									</div>	
+                  
                                 </form>
 							</div>
                         </div>
