--- a/3_gateManagement/totalSeva.html
+++ b/3_gateManagement/totalSeva.html
@@ -68,7 +68,7 @@
                             <th>Card No</th>
                             <th>Issued To</th>
                             <th>Mobile No</th>
-                            <th>Centre</th>
+                            <th>Department</th>
                           </tr>
                         </thead>
                         <tbody id="prResidents">
