--- a/1_cardManagement/searchCard.html
+++ b/1_cardManagement/searchCard.html
@@ -68,7 +68,7 @@
                       <input
                         type="text"
                         id="search"
-                        placeholder="Search by name or card number"
+                        placeholder="Search by name"
                       />
                     </div>
                     <div class="table">
