Update Privacy Policy

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
           <div id="privacy-section" class="legal-section active">
             <div id="privacy-section" class="legal-section active">
               <h1>Privacy Policy</h1>
-              <p>Last updated: February 11, 2025</p>
+              <p>Last updated: March 19, 2025</p>
               <p>
                 This Privacy Policy describes Our policies and procedures on the
                 collection, use and disclosure of Your information when You use
@@ -539,25 +539,19 @@
                   You to access our Service or parts of our Service.
                 </li>
                 <li>
-                  <strong>Affiliate</strong> means an entity that controls, is
-                  controlled by or is under common control with a party, where
-                  "control" means ownership of 50% or more of the shares, equity
-                  interest or other securities entitled to vote for election of
-                  directors or other managing authority.
-                </li>
-                <li>
                   <strong>Application</strong> refers to Vitraag Vigyaan
-                  Aashray, the software program provided by the Company.
+                  Aashray, the software program provided by the Shrimad
+                  Rajchandra Aatma Tatva Research Centre.
                 </li>
                 <li>
                   <strong>Company</strong> (referred to as either "the Company",
-                  "We", "Us" or "Our") refers to Vitraag Vigyaan, Khopoli,
-                  maharashtra.
+                  "We", "Us" or "Our") refers to Shrimad Rajchandra Aatma Tatva
+                  Research Centre.
                 </li>
-                <li><strong>Country</strong> refers to: Maharashtra, India</li>
                 <li>
                   <strong>Device</strong> means any device that can access the
                   Service such as a computer, a cellphone or a digital tablet.
+                  Not excluding other devices such as watches, etc.
                 </li>
                 <li>
                   <strong>Personal Data</strong> is any information that relates
