--- a/admin/index.html
+++ b/admin/index.html
@@ -85,6 +85,7 @@
     <!-- JavaScript Files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/373a347df2.js"></script>
+    <script src="../style/js/config.js"></script>
     <script src="../style/js/plugin.js"></script>
     <script src="../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../style/js/clockpicker.js"></script>
