--- a/admin/room/ReservationReport.html
+++ b/admin/room/ReservationReport.html
@@ -32,26 +32,63 @@
     </div>
 
     <div class="middlecontent">
-      <div class="container">
+      <div class="container-fluid">
         <div class="whitesec">
           <div class="frm-head">
             <h1>
               <b><u>Reservation Report</u></b>
             </h1>
           </div>
-          <div class="form">
-            <form id="reservationReportForm">
-              <label for="start_date">Start Date:</label>
-              <input type="date" id="start_date" name="start_date" required />
+          <div class="form" id="reservationReportForm">
+            <form class="row">
+                <label for="start_date" class="col-form-label">Start Date:</label>
+                <div class="col-sm-3">
+                  <input type="date" class="form-control" id="start_date" name="start_date" required />
+                </div>
 
-              <label for="end_date">End Date:</label>
-              <input type="date" id="end_date" name="end_date" required />
+                <label for="end_date" class="col-form-label">End Date:</label>
+                <div class="col-sm-3">
+                  <input type="date" class="form-control" id="end_date" name="end_date" required />
+                </div>
 
-              <button type="submit">Fetch Report</button>
+                <div class="col-sm-3">
+                  <button type="submit" class="btn btn-small">Fetch Report</button>
+                </div>
             </form>
 
-            <div id="reportResults">
-              <!-- Report results will be dynamically populated here -->
+            <div class="row">
+              <div class="col-md-12">
+                <div class="table">
+                  <table
+                    id="reportTable"
+                    class="table table-striped table-bordered"
+                  >
+                    <thead>
+                      <tr>
+                        <th>Booking ID</th>
+                        <th>Room No</th>
+                        <th>Room Type</th>
+                        <th>Check-in</th>
+                        <th>Check-out</th>
+                        <th>Status</th>
+                        <th>Nights</th>
+                        <th>Card Number</th>
+                        <th>Issued To</th>
+                        <th>Mobile Number</th>
+                        <th>Centre</th>
+                        <th>Booked By</th>
+                      </tr>
+                    </thead>
+                    <tbody id="reportTableBody">
+                      <!-- Table rows will be dynamically added here -->
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+
+            <div class="row" id="emptyReportResult">
+
             </div>
           </div>
         </div>
