--- a/admin/room/ReservationReport.html
+++ b/admin/room/ReservationReport.html
@@ -10,6 +10,10 @@
     <script src="../../style/js/config.js"></script>
     <script src="../../style/js/header.js"></script>
 
+    <script>
+      const REPORT_URL = `${CONFIG.basePath}/stay/reservation_report`;
+    </script>
+
     <!-- Additional Styles and Scripts -->
     <script src="https://use.fontawesome.com/373a347df2.js"></script>
     <script src="../../style/js/plugin.js"></script>
@@ -39,7 +43,7 @@
               <b><u>Reservation Report</u></b>
             </h1>
           </div>
-          <div class="form" id="reservationReportForm">
+          <div class="form" id="reportForm">
             <form class="row">
                 <label for="start_date" class="col-form-label">Start Date:</label>
                 <div class="col-sm-3">
