--- a/admin/room/index.html
+++ b/admin/room/index.html
@@ -122,17 +122,17 @@
                   >
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="ReservationReport.html"
+                    href="reservationReport.html"
                     >Reservation Report</a
                   >
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="CancellationReport.html"
+                    href="cancellationReport.html"
                     >Cancellation Report</a
                   >
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="WaitlistReport.html"
+                    href="waitlistReport.html"
                     >Waitlist Report</a
                   >
                   <a
