fix daily guest count report

--- a/admin/report/index.html
+++ b/admin/report/index.html
@@ -50,7 +50,7 @@
                         Waitlist Report
                       </option>
                       <option value="roomStatusAdmin.html">
-                        Daywise Guest Count Report
+                        Daily Guest Count Report
                       </option>
                       <option value="roomStatus.html">
                         Room Availability Report
