--- a/admin/room/index.html
+++ b/admin/room/index.html
@@ -137,8 +137,8 @@
                   >
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="dayWiseGuestCountReport.html"
-                    >DayWise Guest Count Report</a
+                    href="dailyGuestCountReport.html"
+                    >Daily Guest Count Report</a
                   >
                 </div>
               </div>
