--- a/admin/room/blockRC.html
+++ b/admin/room/blockRC.html
@@ -42,8 +42,7 @@
             </div>
             <div class="form">
               <form id="blockRCForm">
-                <div id="alert" class="alert" role="alert">
-                </div>
+                <div id="alert" class="alert" role="alert"></div>
                 <div class="row">
                   <div class="col-sm-3">
                     <label for="checkin_date" class="col-form-label">Start Date:</label>
