--- a/admin/room/blockRoom.html
+++ b/admin/room/blockRoom.html
@@ -40,15 +40,19 @@
                 <b><u>Block Room</u></b>
               </h4>
             </div>
+
             <div class="form">
-              <form id="blockRoomForm">
-                <label for="roomNo">Room Number:</label>
-                <input type="text" id="roomNo" name="roomNo" required />
-
-                <button type="submit">Block Room</button>
+              <div id="alert" class="alert" role="alert"></div>
+              <form class="row" id="blockRoomForm">
+                <label for="roomNo" class="col-form-label">Room No:</label>
+                <div class="col-sm-7">
+                  <input type="text" class="form-control" id="roomNo" name="roomNo" required />
+                </div>
+  
+                <div class="col-sm-1">
+                  <button type="submit" class="btn btn-small">Block Room</button>
+                </div>
               </form>
-
-              <div id="message"></div>
             </div>
           </div>
         </div>
