update checkin, checkout reports

--- a/admin/room/checkinReport.html
+++ b/admin/room/checkinReport.html
@@ -22,7 +22,7 @@
 
   <body>
     <div class="header">
-      <div class="container">
+      <div class="container-fluid">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
           &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="middlecontent">
-      <div class="container">
+      <div class="container-fluid">
         <div class="whitesec">
           <div class="frm-head">
             <h1>
@@ -48,14 +48,17 @@
                   <thead>
                     <tr>
                       <th>Booking ID</th>
-                      <th>Room Number</th>
-                      <th>Check-in Date</th>
-                      <th>Check-out Date</th>
+                      <th>Room No</th>
+                      <th>Room Type</th>
+                      <th>Check-in</th>
+                      <th>Check-out</th>
+                      <th>Status</th>
                       <th>Nights</th>
                       <th>Card Number</th>
                       <th>Issued To</th>
                       <th>Mobile Number</th>
                       <th>Centre</th>
+                      <th>Booked By</th>
                     </tr>
                   </thead>
                   <tbody id="checkinTableBody">
