--- a/admin/room/manualCheckout.html
+++ b/admin/room/manualCheckout.html
@@ -40,13 +40,19 @@
                 <b><u>Manual Check-out</u></b>
               </h4>
             </div>
-            <form id="manualCheckoutForm">
-              <div>
-                <label for="cardno">Card Number:</label>
-                <input type="text" id="cardno" name="cardno" required />
-              </div>
-              <button type="submit">Check-out</button>
-            </form>
+            <div class="form">
+              <div id="alert" class="alert" role="alert"></div>
+              <form class="row" id="manualCheckoutForm">
+                <label for="cardno" class="col-form-label">Card No:</label>
+                <div class="col-sm-7">
+                  <input type="text" class="form-control" id="cardno" name="cardno" required />
+                </div>
+  
+                <div class="col-sm-1">
+                  <button type="submit" class="btn btn-small">Check-out</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
