--- a/admin/room/flatBooking.html
+++ b/admin/room/flatBooking.html
@@ -22,7 +22,7 @@
 
   <body>
     <div class="header">
-      <div class="container">
+      <div class="container-fluid">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
           &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
@@ -32,7 +32,7 @@
     </div>
 
     <div class="middlecontent">
-      <div class="container">
+      <div class="container-fluid">
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
@@ -40,37 +40,50 @@
                 <b><u>Flat Booking</u></b>
               </h4>
             </div>
+
             <div class="form">
-              <div class="row">
-                <div class="col-md-12">
-                  <form id="flatBookingForm">
-                    <label for="mobno">Mobile Number:</label>
-                    <input type="tel" id="mobno" name="mobno" required />
-
-                    <label for="checkin_date">Check-in Date:</label>
-                    <input
-                      type="date"
-                      id="checkin_date"
-                      name="checkin_date"
-                      required
-                    />
-
-                    <label for="checkout_date">Check-out Date:</label>
-                    <input
-                      type="date"
-                      id="checkout_date"
-                      name="checkout_date"
-                      required
-                    />
-
-                    <label for="flat_no">Flat Number:</label>
-                    <input type="text" id="flat_no" name="flat_no" required />
-
-                    <button type="submit">Book Flat</button>
-                  </form>
-                  <p id="statusMessage"></p>
+              <div id="alert" class="alert" role="alert"></div>
+              <form id="flatBookingForm">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <label for="mobile" class="col-form-label">Mobile No:</label>
+                  </div>
+                  <div class="col-sm-4">
+                    <input type="tel" class="form-control" id="mobile" name="mobile" required />
+                  </div>
                 </div>
-              </div>
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <label for="checkin_date" class="col-form-label">Check-in Date:</label>
+                  </div>  
+                  <div class="col-sm-3">
+                    <input type="date" class="form-control" id="checkin_date" name="checkin_date" required />
+                  </div>
+
+                  <div class="col-sm-3">
+                    <label for="checkout_date" class="col-form-label">Check-out Date:</label>
+                  </div>
+                  <div class="col-sm-3">
+                    <input type="date" class="form-control" id="checkout_date" name="checkout_date" required />
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <label for="flat_no" class="col-form-label">Flat No:</label>
+                  </div>
+                  <div class="col-sm-3">
+                    <input type="text" class="form-control" id="flat_no" name="flat_no" required />
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-sm-3">
+                    <button type="submit" class="btn btn-small">Book Flat</button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
