removed font-awesome

--- a/admin/room/roomBooking.html
+++ b/admin/room/roomBooking.html
@@ -11,7 +11,7 @@
     <script src="../../style/js/header.js"></script>
 
     <!-- Additional Styles and Scripts -->
-    <script src="https://use.fontawesome.com/373a347df2.js"></script>
+
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
@@ -70,8 +70,8 @@
 
                     <label for="floor_pref">Floor Preference:</label>
                     <select id="floor_pref" name="floor_pref" required>
-                      <option value="ground">Ground</option>
-                      <option value="first">First</option>
+                      <option value="sc">Ground</option>
+                      <option value="">First</option>
                     </select>
 
                     <button type="submit">Book Room</button>
