--- a/admin/adhyayan/fetchAllAdhyayan.html
+++ b/admin/adhyayan/fetchAllAdhyayan.html
@@ -11,7 +11,6 @@
     <script src="../../style/js/header.js"></script>
 
     <!-- Additional Styles and Scripts -->
-
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
@@ -29,6 +28,7 @@
         </div>
       </div>
     </div>
+
     <div class="middlecontent">
       <div class="container">
         <div class="whitesec">
@@ -52,11 +52,13 @@
                           <th><center>Start Date</center></th>
                           <th><center>End Date</center></th>
                           <th><center>Max Count</center></th>
+                          <th><center>Status</center></th>
+                          <!-- Added Status Column -->
                           <th><center>Action</center></th>
                         </tr>
                       </thead>
                       <tbody>
-                        <!-- Rows will be populated by JavaScript -->
+                        <!-- Rows will be populated dynamically using JavaScript -->
                       </tbody>
                     </table>
                   </div>
