--- a/admin/adhyayan/createAdhyayan.html
+++ b/admin/adhyayan/createAdhyayan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Room Admin</title>
+    <title>Adhyayan Admin</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -38,7 +38,7 @@
                 <b><u>Create Adhyayan</u></b>
               </h4>
             </div>
-            <div class="form" onsubmit="createAdhyayan(event)">
+            <div class="form">
               <form id="adhyayanForm">
                 <div class="row">
                   <div class="col-md-12">
