--- a/admin/adhyayan/index.html
+++ b/admin/adhyayan/index.html
@@ -54,7 +54,7 @@
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
                     href="adhyayanReport.html"
-                    >Adhyayan Report</a
+                    >Adhyayan Summary Report</a
                   >
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
@@ -65,11 +65,6 @@
                     class="btn col-md-12 btn-lg btn-demo"
                     href="adhyayanStatusUpdate.html"
                     >Adhyayan Status Update</a
-                  >
-                  <a
-                    class="btn col-md-12 btn-lg btn-demo"
-                    href="openCloseAdhyayan.html"
-                    >Open/Close Adhyayan</a
                   >
                 </div>
               </div>
