--- a/admin/adhyayan/updateAdhyayan.html
+++ b/admin/adhyayan/updateAdhyayan.html
@@ -12,29 +12,19 @@
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
-<link href="../style/css/plugin.css" rel="stylesheet">
+<link href="../../style/css/plugin.css" rel="stylesheet">
 <!-- Custom styles for this template -->
-<link href="../style/css/clockpicker.css" rel="stylesheet">
-<link href="../style/css/style.css" rel="stylesheet">
+<link href="../../style/css/clockpicker.css" rel="stylesheet">
+<link href="../../style/css/style.css" rel="stylesheet">
 </head>
 <body>
-<div class="fullheight" style="background:url(../style/images/RC_Blur.png) no-repeat center center; background-size: cover;">
+<div class="fullheight" style="background:url(../../style/images/RC_Blur.png) no-repeat center center; background-size: cover;">
   <div class="header">
     <div class="container">
       <div class="logout">
-        <a id="homelink" href="../index.html">
-          <img alt="" title="" /> Logout
-        </a>
-      </div>
-      <div class="logout">
-        <a href="/adminhome.html">
-          <img alt="" title="" /> Home &nbsp; | &nbsp;
-        </a>
-      </div>
-      <div class="logout">
-        <a href="/adhyayan/adhyayanManagement.html">
-          <img alt="" title="" /> Back &nbsp; | &nbsp;
-        </a>
+        <a href="javascript:void(0);" onclick="history.back()">Back</a>
+        &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
+        <a id="homelink" href="/admin/">Logout</a>
       </div>
     </div>
   </div>
@@ -121,10 +111,10 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
  
-<script src="../style/js/plugin.js"></script>
-<script src="../style/js/bootstrap-datepicker.min.js"></script>
-<script src="../style/js/clockpicker.js"></script>
-<script src="../style/js/custom.js"></script>
+<script src="../../style/js/plugin.js"></script>
+<script src="../../style/js/bootstrap-datepicker.min.js"></script>
+<script src="../../style/js/clockpicker.js"></script>
+<script src="../../style/js/custom.js"></script>
 <script src="updateAdhyayan.js"></script>
 <script src="/sessionstorage.js"></script>
 </body>
