Fix AdhyanWaitList reportFix AdhyanWaitList reportFix AdhyanWaitList report

--- a/admin/adhyayan/adhyayanWaitlist.html
+++ b/admin/adhyayan/adhyayanWaitlist.html
@@ -11,7 +11,6 @@
     <script src="../../style/js/header.js"></script>
 
     <!-- Additional Styles and Scripts -->
-    <script src="https://use.fontawesome.com/373a347df2.js"></script>
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
@@ -45,14 +44,16 @@
                 >
                   <thead>
                     <tr>
+                      <th>Booking ID</th>
                       <th><center>Shibir Name</center></th>
                       <th><center>Speaker</center></th>
                       <th><center>Start Date</center></th>
                       <th><center>End Date</center></th>
-                      <th><center>Card No</center></th>
-                      <th><center>Issued To</center></th>
-                      <th><center>Mobile No</center></th>
-                      <th><center>Centre</center></th>
+                      <th>Booked By</th>
+                      <th>Issued To</th>
+                      <th>Mobile Number</th>
+                      <th>Center</th>
+                      <th>Mumkshu Status</th>
                     </tr>
                   </thead>
                   <tbody>
