--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -11,7 +11,6 @@
     <script src="../../style/js/header.js"></script>
 
     <!-- Additional Styles and Scripts -->
-
     <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
@@ -19,7 +18,6 @@
     <script src="/sessionstorage.js"></script>
     <script src="fetchUpcomingBookings.js"></script>
   </head>
-
   <body>
     <div class="header">
       <div class="container">
@@ -30,38 +28,45 @@
         </div>
       </div>
     </div>
+
     <div class="middlecontent">
-      <div class="container">
-        <div class="whitesec">
-          <div class="inner-padding">
-            <div class="frm-head">
-              <h1>
-                <b><u>Upcoming Travel Bookings</u></b>
-              </h1>
-            </div>
-            <div class="form">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="table">
-                    <table
+      <div class="whitesec">
+        <div class="frm-head">
+          <h1><br />Upcoming Travel Bookings</h1>
+        </div>
+        <div class="form">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="table">
+                <table
                       id="upcomingBookings"
-                      class="table table-striped table-bordered"
-                    >
+                      class="table table-striped table-bordered">
+
                       <thead>
                         <tr>
-                          <th>Date</th>
-                          <th>Card Number</th>
-                          <th>Issued To</th>
-                          <th>Mobile Number</th>
-                          <th>Centre</th>
+                          <th>Booking Id</th>
+                          <th>Name </th>
+                          <th>Travel Date</th>  
+                          <th>Pickup Point</th>
+                          <th>Drop off Point</th>
+                          <th>Type</th>
+                          <th>Luggage</th>
+                          <th>Comments</th>
+                          <th>Admin Comments</th>
+                          <th>Status</th>
+                          <th>Amount</th>
+                          <th>UPI Reference</th>
+                          <th>Payment Status</th>
+                          <th>Booked By</th>
+                          <th>Mobile NO</th>
+                          <th>Center</th>
+                          <th>Mumkshu Status</th>
                         </tr>
                       </thead>
                       <tbody>
                         <!-- Rows will be populated by JavaScript -->
                       </tbody>
                     </table>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
