Update download links in index.html for Google Play and App Store

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
               <a
                 href="https://play.google.com/store/apps/details?id=org.vitraagvigyaan.aashray"
                 target="_blank"
-                class="download-btn primary"
+                class="download-btn"
               >
                 <img
                   src="./assets/images/googleplay.png"
@@ -460,7 +460,11 @@
                 />
                 Google Play
               </a>
-              <a href="#" class="download-btn">
+              <a
+                href="https://apps.apple.com/in/app/vitraag-vigyaan-aashray/id6743924565"
+                target="_blank"
+                class="download-btn"
+              >
                 <img src="./assets/images/appstore.webp" alt="App Store icon" />
                 App Store
               </a>
