--- a/admin/room/occupancyReport.html
+++ b/admin/room/occupancyReport.html
@@ -50,14 +50,15 @@
                     <thead>
                       <tr>
                         <th>Booking ID</th>
-                        <th>Room Number</th>
-                        <th>Check-in Date</th>
-                        <th>Check-out Date</th>
-                        <th>Nights</th>
-                        <th>Card Number</th>
-                        <th>Issued To</th>
-                        <th>Mobile Number</th>
+                        <th>Guest Name</th> 
+                        <th>Mobile No.</th>
                         <th>Centre</th>
+                        <th>Room No</th>
+                        <th>Room Type</th>
+                        <th>Check-in</th>
+                        <th>Check-out</th>
+                        <th>Nights</th>
+                        <th>Booked By</th>
                       </tr>
                     </thead>
                     <tbody>
